<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/Q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1" />
        <CheckBox
            android:id="@+id/chb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three" />
        <CheckBox
            android:id="@+id/chb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four" />
        <CheckBox
            android:id="@+id/chb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six" />
        <TextView
            android:id="@+id/Q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2" />
        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message"
            android:inputType="text" />
        <TextView
            android:id="@+id/Q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3" />
        <RadioGroup
            android:id="@+id/Group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radioaQ3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rno" />
            <RadioButton
                android:id="@+id/radiobQ3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ryes" />
        </RadioGroup>
        <TextView
            android:id="@+id/Q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4" />
        <RadioGroup
            android:id="@+id/Group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radioaQ4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rno" />
            <RadioButton
                android:id="@+id/radiobQ4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ryes" />
        </RadioGroup>
        <Button
            android:id="@+id/Sumbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="SumbitQuiz"
            android:text="@string/Submit" />
    </LinearLayout>
</ScrollView>